Show full path for referrers, not just hostname

--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -90,7 +90,7 @@
           'start-date': '30daysAgo',
           'end-date': 'today',
           'metrics': 'ga:pageviews',
-          'dimensions': 'ga:source',
+          'dimensions': 'ga:fullReferrer',
           'sort': '-ga:pageviews',
           'max-results': 25
         },
