--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -33,7 +33,15 @@
 
 {% block extra_js %}
     {{ block.super }}
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script>
+    if (!window.google || !window.google.load) {
+      var tag = document.createElement('script');
+      tag.type = 'text/javascript';
+      tag.src = 'https://www.google.com/jsapi';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(tag, s);
+    }
+    </script>
     <script>
     gapi.analytics.ready(function() {
 
