--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -22,7 +22,7 @@
 
     <div class="nice-padding">
         <h2>Sessions</h2>
-        <div id="sessions-line-chart-container">Loading...</div>
+        <div id="sessions-line-chart-container" style="height: 200px;">Loading...</div>
         <h2>Popular content</h2>
         <div id="popular-pages-table-container">Loading...</div>
         <h2>Top referrers</h2>
@@ -33,88 +33,10 @@
 
 {% block extra_js %}
     {{ block.super }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
+    <script src="{% static 'wagalytics/wagalytics.js' %}"></script>
     <script>
-    if (!window.google || !window.google.load) {
-      var tag = document.createElement('script');
-      tag.type = 'text/javascript';
-      tag.src = 'https://www.google.com/jsapi';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(tag, s);
-    }
-
-    gapi.analytics.ready(function() {
-
-      $.get( "{% url 'wagalytics_token' %}", function(data) {
-            gapi.analytics.auth.authorize({
-              'serverAuth': {
-              'access_token': data
-            }
-        })
-      });
-
-      var sessionsLineChart = new gapi.analytics.googleCharts.DataChart({
-        query: {
-          'ids': '{{ ga_view_id }}',
-          'start-date': '30daysAgo',
-          'end-date': 'today',
-          'metrics': 'ga:sessions',
-          'dimensions': 'ga:date'
-        },
-        chart: {
-          'container': 'sessions-line-chart-container',
-          'type': 'LINE',
-          'options': {
-            'width': '100%',
-            'height': '200px',
-          }
-        }
-      });
-      sessionsLineChart.execute();
-
-      var popularPagesTable = new gapi.analytics.googleCharts.DataChart({
-        query: {
-          'ids': '{{ ga_view_id }}',
-          'start-date': '30daysAgo',
-          'end-date': 'today',
-          'metrics': 'ga:pageviews',
-          'dimensions': 'ga:hostname,ga:pagePath',
-          'sort': '-ga:pageviews',
-          'max-results': 25
-        },
-        chart: {
-          'container': 'popular-pages-table-container',
-          'type': 'TABLE',
-          'options': {
-            'width': '100%',
-            'page': 'enable',
-            'pageSize': 5
-          }
-        }
-      });
-      popularPagesTable.execute();
-
-      var topReferrersTable = new gapi.analytics.googleCharts.DataChart({
-        query: {
-          'ids': '{{ ga_view_id }}',
-          'start-date': '30daysAgo',
-          'end-date': 'today',
-          'metrics': 'ga:pageviews',
-          'dimensions': 'ga:fullReferrer',
-          'sort': '-ga:pageviews',
-          'max-results': 25
-        },
-        chart: {
-          'container': 'top-referrers-table-container',
-          'type': 'TABLE',
-          'options': {
-            'width': '100%',
-            'page': 'enable',
-            'pageSize': 5
-          }
-        }
-      });
-      topReferrersTable.execute();
-
-    });
+      setup("{% url 'wagalytics_token' %}", "{{ ga_view_id }}");
     </script>
 {% endblock %}
