Revert back to table for content views

--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -42,11 +42,11 @@
         <div id="sessions-line-chart-container" class="chart"><i class="icon icon-spinner"></i></div>
         <div class="col6">
           <h2>Popular content <small><i>(Last <span class="range-n-days"></span> days)</i></small></h2>
-          <div id="popular-pages-table-container" class="chart"><i class="icon icon-spinner"></i></div>
+          <div id="popular-pages-table-container"><i class="icon icon-spinner"></i></div>
         </div>
         <div class="col6">
           <h2>Top referrers <small><i>(Last <span class="range-n-days"></span> days)</i></small></h2>
-          <div id="top-referrers-table-container" class="chart"><i class="icon icon-spinner"></i></div>
+          <div id="top-referrers-table-container" ><i class="icon icon-spinner"></i></div>
         </div>
     </div>
     <div hidden id="wagalytics-data" data-token="{% url 'wagalytics_token' %}" data-view-id="{{ ga_view_id }}">
