--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "wagtailadmin/base.html" %}
-{% load wagtailadmin_tags i18n staticfiles gravatar %}
+{% load wagtailadmin_tags i18n staticfiles %}
 
 {% block extra_css %}
     {% include "wagtailadmin/pages/_editor_css.html" %}
